Fixed wrapping items in toolbars

--- a/styles/themes/Sand/styles.less
+++ b/styles/themes/Sand/styles.less
@@ -89,7 +89,6 @@
 	border-bottom: 1px solid #cacfd5;
 	border-radius: 4px 4px 0 0;
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e6edf5', endColorstr='#dbe3eb', GradientType=0);
-	white-space: nowrap;
 
 	.resizer {
 		height: @theme-toolbar-height;
